<resources>
    <string name="app_name">Planning Poker</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="question">Please write your question</string>
    <string name="planning_poker">Planning Poker</string>
    <string name="session">Session</string>
    <string name="vote">Vote</string>
    <string name="textNumberOne">1</string>
    <string name="TextNumberTwo">2</string>
    <string name="TextNumberThree">3</string>
    <string name="NumberFour">4</string>
    <string name="NumberFive">5</string>
    <string name="questionCode">Question Code</string>
    <string name="createSession">Create Session</string>
    <string name="joinSession">Join Session</string>
    <string name="update">Update</string>

    <string name="codeString">Code</string>
    <string name="questionString">Question</string>
    <string name="view_question">View question</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment">Fragment</string>

</resources>
