<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VoteActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewvote"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@color/colorDarkBlue"
            android:gravity="center"
            android:text="@string/vote"
            android:textColor="@color/colorWhite"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonVote1"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/textNumberOne"
                android:background="@color/colorOrange"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/buttonVote2"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/TextNumberTwo"
                android:background="@color/colorOrange"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/buttonVote3"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/TextNumberThree"
                android:background="@color/colorOrange"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/buttonVote4"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/NumberFour"
                android:background="@color/colorOrange"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/buttonVote5"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/NumberFive"
                android:background="@color/colorOrange"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"/>
        </LinearLayout>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>