<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SessionActivity"
    android:textAlignment="center"
    android:background="@color/colorBackgroung">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewLogin"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:text="@string/session"
            android:textSize="20dp"
            android:textStyle="bold"
            android:background="@color/colorDarkBlue"
            android:textColor="@color/colorWhite"
            android:gravity="center"/>

        <EditText
            android:id="@+id/sQuestionLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/question"
            android:inputType="textMultiLine" />

        <EditText
            android:id="@+id/sQuestionCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/questionCode"
            android:inputType="number" />

        <Button
            android:id="@+id/sCreateButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@color/colorOrange"
            android:text="@string/createSession" />

        <View
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="4dp"
            android:background="@color/colorDarkBlue"/>

        <EditText
            android:id="@+id/sQuestionCodeJoin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:ems="10"
            android:hint="@string/questionCode"
            android:inputType="number" />

        <Button
            android:id="@+id/sJoinSession"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorOrange"
            android:text="@string/joinSession" />

        <Button
            android:id="@+id/newButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="New" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>